# argtyped

./: .pylintrc  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  pythonpackage.yml
argtyped/: __init__.py  __version__.py  arguments.py  attrs_arguments.py  custom_types.py
tests/: conftest.py  test_attrs.py  test_custom_types.py  test_errors.py  test_inheritance.py  test_invalid_args.py  test_parsing.py
