[metadata]
name = argtyped
version = attr: argtyped.__version__.VERSION
author = Zecong Hu
author_email = huzecong@gmail.com
url = https://github.com/huzecong/argtyped
description = Command line arguments, with types
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Shells
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    typing-inspect >= 0.7.1

[options.extras_require]
dev =
    pylint == 2.13.9
    black == 22.6.0
    isort == 5.10.1
    mypy == 0.961
    pytest
    pytest-cov

[options.packages.find]
exclude =
    build/*
    tests/*
